# cledara-tripletex-converter

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
cledara_tripletex/: main.py
cledara_tripletex/models/: accounting_entry.py
