[tool.poetry]
name = "cledara-tripletex"
version = "0.1.0"
description = ""
authors = ["Stig Christian Aske <sca@vitalthings.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
