[tool.poetry]
name = "cledara-tripletex"
version = "0.1.0"
description = ""
authors = ["Stig Christian Aske <sca@vitalthings.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
typer = "^0.12.5"
ruff = "^0.6.9"
pydantic = "^2.9.2"

[tool.poetry.scripts]
cledara-tripletex = "cledara_tripletex.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
